fix: sidebar z-index

--- a/frontend/src/components/sidebar/index.module.css
+++ b/frontend/src/components/sidebar/index.module.css
@@ -71,6 +71,8 @@
     flex-direction: column;
     top: 68px;
     color: var(--text_unselect);
+    z-index: -10;
+    position: absolute;
 
     div {
       display: flex;
